Add transaction list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     Welcome to {{title}}!
   </h1>
   <img width="300" src="../assets/images/app-icon.png">
+  <app-transaction-list></app-transaction-list>
 </div>
 
 
