--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <img width="300" src="../assets/images/app-icon.png">
-  <app-transaction-list></app-transaction-list>
+  <router-outlet></router-outlet>
 </div>
 
 
