--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,15 @@
-<mat-form-field>
-    <input matInput placeholder="Input">
-</mat-form-field>
-<mat-form-field>
-    <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
-    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
-  </mat-form-field>
+<div class="login-page">
+    <mat-card class="login-card">
+        <img src="../../assets/images/app-icon.png" alt="App logo image" class="app-image"/>
+        <mat-form-field class="login-input">
+            <input matInput placeholder="Input" [(ngModel)]="userName">
+        </mat-form-field>
+        <mat-form-field class="login-input">
+            <input matInput placeholder="Enter your password" [(ngModel)]="password" [type]="hide ? 'password' : 'text'">
+            <mat-icon matSuffix (click)="togglePasswordHideState()">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="login-input" (click)="onLoginButtonClick()">Login</button>
+        <span class="buttons-divider">OR</span>
+        <button mat-raised-button color="primary" class="login-input">Register</button>
+    </mat-card>
+</div>
