--- a/src/app/transaction-list/transaction-list.component.css
+++ b/src/app/transaction-list/transaction-list.component.css
@@ -15,3 +15,13 @@
 .card-title{
   font-size: 20px;
 }
+
+.toolbar-app-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+}
+
+.toolbar-title {
+  flex: 1 1 auto;
+}
